# gastify

./: CallCommand.md  ChangeLog  Makefile.in  ProjectHome.md  README  TODO  aclocal.m4  app_notifyInstall.md  build-packages.sh  checkinstall.sh  configure  configure.in  description-pak  freeBPX.md  gastify.dev  gastify.glade  gastify.ui
autom4te.cache/: output.0  output.3  requests  traces.1  traces.4
extras/: callscript.php
pixmaps/: Makefile.in
po/: de.po  gastify.pot  it.po
src/: Makefile.in  gui.c  gui.h  main.c  main.h  socket.c
tags/release-1.1/: AUTHORS  ChangeLog  Makefile.in  gastify.dev  gastify.glade.h
tags/release-1.1/autom4te.cache/: output.1  traces.0  traces.1
tags/release-1.1/po/: de.gmo
tags/release-1.1/src/: Makefile.am
tags/release-1.2.2/: Makefile.am  Makefile.in  configure  configure.in  gastify.dev  gastify.glade
tags/release-1.2.2/autom4te.cache/: output.2  traces.4
tags/release-1.2.2/po/: POTFILES.in  de.gmo  de.po
tags/release-1.2.2/src/: Makefile.in  gui.h  socket.c
tags/release-1.2.3/: ChangeLog  Makefile.in  configure.in  postinstall-pak
tags/release-1.2.3/po/: ChangeLog
tags/release-1.2.3/src/: Makefile.am  Makefile.in  gui.h  main.c  main.h  socket.c  socket.h
tags/release-1.3.0/: AUTHORS  Makefile.am  aclocal.m4  build-packages.sh  config.h.in  gastify.ui
tags/release-1.3.0/pixmaps/: Makefile.am
tags/release-1.3.0/po/: ChangeLog  POTFILES.in  de.po  gastify.pot
tags/release-1.3.0/src/: Makefile.am  gui.c  main.c  main.h
trunk/: ChangeLog  Makefile.in  aclocal.m4  build-packages.sh  checkinstall.sh  config.h.in  configure  configure.in  gastify.dev  gastify.glade  gastify.ui
trunk/autom4te.cache/: output.1  requests  traces.0  traces.2  traces.3
trunk/extras/: placecall.sh
trunk/m4/: ChangeLog
trunk/pixmaps/: Makefile.am  Makefile.in
trunk/po/: POTFILES.in  de.po  gastify.pot  it.po
trunk/src/: Makefile.in  gui.c  gui.h  main.c  socket.c  socket.h
wiki/: CallCommand.wiki  app_notifyInstall.wiki  freeBPX.wiki
