AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(gastify, 1.3.0 )
AC_PREFIX_DEFAULT("/usr/local")
AC_CONFIG_HEADERS([config.h])

CFLAGS=
AC_SUBST(CFLAGS)
AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CC
AC_PROG_CC
AC_DIAGNOSE([obsolete],[AM_PROG_CC_STDC:
	your code should no longer depend upon `am_cv_prog_cc_stdc', but upon
	`ac_cv_prog_cc_stdc'.  Remove this warning and the assignment when
	you adjust the code.  You can also remove the above call to
	AC_PROG_CC if you already called it elsewhere.])
am_cv_prog_cc_stdc=$ac_cv_prog_cc_stdc

AC_HEADER_STDC

PKG_CHECK_MODULES( GLIB, glib-2.0 >= 2.12.0 )
PKG_CHECK_MODULES( GTK, gtk+-2.0 >= 2.12.0 )
PKG_CHECK_MODULES( LIBNOTIFY, libnotify >= 0.4.2 )

GETTEXT_PACKAGE=gastify
ALL_LINGUAS="de it"
AM_GLIB_GNU_GETTEXT
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [gettext domain])
AC_SUBST(GETTEXT_PACKAGE)

if test "${prefix}" = "NONE"; then
	prefix=${ac_default_prefix}
fi

DATADIRNAME=share
AC_DEFINE_UNQUOTED([PACKAGE_LOCALE_DIR], ["${prefix}/${DATADIRNAME}/locale"],[Defines the place where locales can be found])
AC_SUBST(PACKAGE_LOCALE_DIR)

AC_DEFINE_UNQUOTED([PACKAGE_DATA_DIR], ["${prefix}/${DATADIRNAME}"],[Defines the place where data are found])
AC_SUBST(PACKAGE_DATA_DIR)

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_CONFIG_FILES([ Makefile src/Makefile po/Makefile.in pixmaps/Makefile ])
AC_OUTPUT
