SUBDIRS = \
  src\
  po\
  pixmaps

ACLOCAL_AMFLAGS = -I m4

gastifydocdir = $(prefix)/share/doc/gastify

gastifydoc_DATA = \
  README\
  COPYING\
  AUTHORS\
  ChangeLog\
  INSTALL\
  NEWS\
  TODO

gladefilesdir = $(prefix)/share/gastify

gladefiles_DATA = \
  gastify.glade

EXTRA_DIST = \
  $(gastifydoc_DATA)\
  $(gladefiles_DATA)

