SUBDIRS = \
  src\
  po\
  pixmaps

ACLOCAL_AMFLAGS = -I m4

gastifydocdir = $(prefix)/share/doc/gastify

gastifydoc_DATA = \
  README\
  COPYING\
  AUTHORS\
  ChangeLog\
  INSTALL\
  NEWS\
  TODO

uifilesdir = $(prefix)/share/gastify

uifiles_DATA = \
  gastify.ui

EXTRA_DIST = \
  $(gastifydoc_DATA)\
  $(uifiles_DATA)

