#EXTRA_DIST = \
#gastify.png \
#gastify_new_call.png
#
#gastifydistpixdir = $(datadir)/pixmaps
#gastifydistpix_DATA = $(EXTRA_DIST)

distpixmapdir = $(datadir)/icons/hicolor/48x48/apps
distpixmap_DATA = gastify.png gastify_new_call.png

gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor

